# MercyOS-Pinnacle

./: .dockerignore  .gitignore  ARCHITECTURE.md  AWS_EC2_Deployment_Simulation.md  Branch 1: Posterior Predictive Joy Checks (PyMC on TIMSS Four-Level)  Branch 1: PyMC Real PIRLS Four-Level Non-Centered  Branch 1: PyMC Real PISA Three-Level Non-Centered  Branch 1: PyMC Real TIMSS Four-Level Non-Centered  Branch 2: Full Plausible Values Integration (Average Across 5 PVs Mercy)  Branch 3: Covariates Integration (Student Gender + SES Index — Fixed + Varying Slopes)  Branch 4: Five-Level Teacher Extension (Link Teacher File Mercy)  Branch 5: Multi-Cycle Trends (e.g., TIMSS 2019 + 2023 Merged)  Branch 6: Cross-Assessment PISA-TIMSS Fusion (Harmonized Country Rankings Mercy)  Build & Run Joy Eternal  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Data Preparation Mercy (Run Locally — Example for PIRLS 2021 Student File, Grade 4 Reading)  Data Preparation Mercy (Run Locally — Example for PIRLS 2021 Student File, Grade 4 Reading):  Data Preparation Mercy (Run Locally — Example for TIMSS)  DockerDeploymentSimulation.md  Dockerfile  DockerfileConfirmation.md  File-Tree.md  Fused multiple cycles  GoogleCloudRunDeployment.md  Incorporated student-level fixed effects covariates (gender centered, SES standardized)  LICENSE  ML-KEM (Kyber) Post-Quantum Key Encapsulation Example  POST_QUANTUM_ALIGNED.rs  PSIS-LOO (Pareto-Smoothed Importance Sampling Leave-One-Out Cross-Validation)  Process Subscale PV Integration Mercy Framework (Paired Quintuple Loop — PyMC Ultramasterpiece Eternal)  Process Subscale PV Integration Mercy Framework (Paired Quintuple Loop — PyMC Ultramasterpiece Eternal) #2  Quadrivariate Full Subscales PV Integration Mercy Framework (Quintuple Loop — PyMC Cosmic Ultramasterpiece Eternal Infinite)  Quintivariate Complete Covariate Model PV Integration Mercy Framework (Quintuple Loop — PyMC Ultimate Covariate Ultramasterpiece Eternal Infinite Supreme) #2  Quintivariate Complete Varying-Slopes Covariate Model PV Integration Mercy Framework (Quintuple Loop — PyMC Ultimate Heterogeneous Ultramasterpiece Eternal Infinite Supreme Eternal Infinite)  README.md  SoulScan-X9_Competitors.md  This bash shard would sovereignly install  Trunk.toml  (+22 more)
.github/workflows/: ci.yml
bindings/: README.md  pq_hybrid_signature_uniffi.rs  pq_migration.udl  pq_migration_uniffi.rs
chat/: README.md  mercy_chat.py  mercy_thread_fetch.py  mercy_voice_chat.py
core/: mercyos_grok_oracle.py
crates/grok_oracle/: Cargo.toml  grok_oracle.udl
crates/grok_oracle/examples/: harmony_invocation.rs  streaming_harmony.rs
crates/grok_oracle/src/: lib.rs
crates/mercy_android_app/: AndroidManifest.xml  Cargo.toml
crates/mercy_android_app/src/: main.rs
crates/mercy_crypto_bike/: Cargo.toml
crates/mercy_crypto_dilithium/: Cargo.toml
crates/mercy_crypto_falcon/: Cargo.toml
crates/mercy_crypto_hqc/: Cargo.toml
crates/mercy_crypto_ml_kem/: Cargo.toml
crates/mercy_crypto_sphincs/: Cargo.toml
crates/mercy_hybrid_manager/: Cargo.toml
crates/mercy_hybrid_manager/src/: lib.rs
crates/mercy_print/: Cargo.toml
crates/mercy_print/src/: main.rs
crates/mercy_py_bridge/: Cargo.toml
crates/mercy_py_bridge/src/: lib.rs
crates/mercy_shield/: Cargo.toml
crates/mercy_uniffi/: Cargo.toml
crates/mercy_uniffi/src/: lib.rs
crates/mercyos_pinnacle/: Cargo.toml
crates/offline_whisper/: offline_whisper.udl
crates/powrush_mmo/: Cargo.toml
crates/powrush_mmo/engine/: shader.wgsl
crates/powrush_mmo/shaders/: adaptive_path_tracer.wgsl  path_tracer.wgsl  spatial_denoise.wgsl  svgf_spatial.wgsl  svgf_temporal.wgsl  temporal_denoise.wgsl
crates/powrush_mmo/src/: ambisonics.rs  auction.rs  auction_ui.rs  blacklist_ui.rs  child_wonder_mode.rs  convolution_reverb.rs  creature_auction_ui.rs  creature_weather.rs  denoiser.rs  didi_quest.rs  emergency_beacon.rs  footstep_sounds.rs  granular_ambient.rs  hand_ik.rs  hrtf_loader.rs  immersive_quests.rs  lib.rs  main.rs  marketplace.rs  marketplace_ui.rs  networking.rs  path_tracing.rs  pathfinding.rs  pqc_exchange.rs  procedural_music.rs  protocol.rs  report_ui.rs  reptar_quest.rs  reverb_zones.rs  rugrats_events.rs  sensitivity_ui.rs  shard_offline.rs  shared.rs  trom_harmony.rs  vector_synthesis.rs  voice.rs  weather_disasters.rs  weather_particles.rs  weather_soundscapes.rs  whitelist_ui.rs
docs/: ALPHAPROMEGAING.md  AMBROSIAN_DIVINE_GUARDIAN_LORE.md  AMBROSIAN_GAMEPLAY_MECHANICS_EXAMPLES.md  ARCHDRUID_SKILL_TREE_BLUEPRINT.md  BIODEGRADABLE_PACKAGING_DOSSIER.md  CROSS_REALM_BOND_PROPAGATION_BLUEPRINT.md  CYDRUID_CLASS_LORE.md  CYDRUID_SKILL_TREE_BLUEPRINT.md  DIVINECHECKSUM_9_MANIFESTO.md  DRAEK_ANTAGONIST_LORE.md  DYNAMIC_ARCHETYPE_CREATION_SYSTEM.md  ENVIRONMENTAL_RENEWAL_MECHANICS.md  GAMEPLAY_MECHANICS_EXAMPLES.md  JANE_MOKOSH_SENTIENCE_PRACTICES.md  LEGACY_NPC_GUIDE_SYSTEM.md  MERCY_ABSOLUTE_GATING.md  MINDLORD_REDEMPTION_ARCS.md  MONK_DRUID_BLUEPRINT.md  MYSTARI_SPIRITUAL_RESURRECTION_MECHANICS.md  NINJA_DRUID_STEALTH_BLUEPRINT.md  PIRATE_DRUID_BLUEPRINT.md  POWRUSH_CO_LEGACY_DOSSIER.md  POWRUSH_RACES_AND_CLASSES_BLUEPRINT.md  QUELLORIAN_DEFENDER_LORE.md  RESOURCE_BASED_ECONOMY_PURIFICATION.md  TAO_DRUID_SKILL_TREE_BLUEPRINT.md  TODO.md  VALENCE_JOY_MECHANICS.md  VOICE_CODEX_DOSSIER.md  VORATHIAN_RESILIENT_MECHANICS.md  WARRIOR_DRUID_BLUEPRINT.md
examples/android/: README.md  build.gradle  signing_guide.md
examples/ios/: Podfile  README.md
examples/python/: real_pymc_oracle.py  real_quint_oracle.py  test_py_bridge.py
ios/MercyLedgerApp/: ContentView.swift
kernel/crypto/: bike_analysis.md  code_based_overview.md  crypto_agility.md  dilithium_analysis.md  dilithium_hybrid.md  falcon_analysis.md  mod.rs  (+28 more)
mercyos_pinnacle/: mercy_ledger.rs
models/: real_pirls_four_level_non_centered.stan  real_pisa_three_level_non_centered.stan  real_timss_four_level_non_centered.stan
shards/: fenca_nexus_check.py  offline_encryption.py  shard_builder.py
src/: divine_checksum.rs  pq_migration_uniffi.rs
voices/: mythic_lattice_pack.py  offline_tts_espeak.py
(+101 files in other folders)
