[workspace]
members = [
    "crates/grok_oracle",
    "crates/mercy_uniffi",
    "crates/mercy_hybrid_manager",
    "crates/mercy_core",
    "crates/mercy_shield",
    "crates/grok_oracle",
    "crates/abundance_thunder",
    "crates/powrush_mmo",
    "crates/mercy_android_app",  # New cargo-apk app crate
]

[workspace.dependencies]
bevy = { version = "0.13", features = ["dynamic"] }
tokio = { version = "1.36", features = ["full"] }
wasm-bindgen = "0.2"
uniffi = { version = "0.25", features = ["build"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
hkdf = "0.12"
sha2 = "0.10"
pqcrypto-kyber = "0.8.1"
pqcrypto-dilithium = "0.5.0"
pqcrypto-falcon = "0.4.0"
pqcrypto-sphincsplus = "0.5.0"
pqcrypto-hqc = "0.3.0"
pqcrypto-classicmceliece = "0.2.0"
pqcrypto-traits = "0.3.5"
