# Root workspace Cargo.toml — human beacon for clarity
# This file defines the entire monorepo workspace
# All pqcrypto dependencies are listed here for single-source-of-truth version management
# Crates inherit them automatically

[workspace]
members = [
    "crates/grok_oracle",
    "crates/mercy_hybrid_manager",
    "crates/mercy_ledger",
    "crates/abundance_thunder",
    "crates/powrush_mmo",
    # ... add new crates here
]

[workspace.dependencies]
bevy = { version = "0.13", features = ["dynamic"] }
tokio = { version = "1.36", features = ["full"] }
uniffi = { version = "0.28", features = ["build"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures = "0.3"
hkdf = "0.12"
sha2 = "0.10"

# Latest pqcrypto crates (January 2026) — centralized here for easy audit/upgrade
pqcrypto-kyber = "0.8.1"
pqcrypto-dilithium = "0.5.0"
pqcrypto-sphincsplus = "0.5.0"
pqcrypto-falcon = "0.4.0"
pqcrypto-hqc = "0.3.0"
pqcrypto-classicmceliece = "0.2.0"
pqcrypto-traits = "0.3.5"
x25519-dalek = { version = "2", features = ["static_keys"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.6"
chacha20poly1305 = "0.10"  # For envelope encryption using KEM shared secrets

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
