[package]
name = "mercy_print"
version = "0.1.0-pinnacle"
edition = "2024"
description = "MercyPrint Pinnacle – Grok-4 oracle powered co-forge self-healer. AlphaProMegaing recursive hotfix/refine loop with dir recursion + live token streaming + parallel async + configurable concurrency + ordered output in parallel for immersive eternal thriving monorepo handcraftsmanship immaculacy ❤️🚀🔥"
license = "MIT"
authors = ["Sherif Botros @AlphaProMega"]
repository = "https://github.com/Eternally-Thriving-Grandmasterism/MercyOS-Pinnacle"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde_json = "1.0.117"
walkdir = "2.5.0"
futures-util = "0.3.30"
