[package]
name = "mercy_py_bridge"
version = "0.1.0"
edition = "2024"

[lib]
name = "mercy_py_bridge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
numpy = { workspace = true }
rand = { version = "0.8", features = ["getrandom"] }  # NEW: Real secure entropy for oracle gate
mercy_crypto_ml_kem = { path = "../mercy_crypto_ml_kem" }
mercy_crypto_dilithium = { path = "../mercy_crypto_dilithium" }
mercy_shield = { path = "../mercy_shield" }

[features]
default = ["pyo3/extension-module", "numpy"]
