[package]
name = "mercy_py_bridge"
version.workspace = true
edition.workspace = true

[lib]
name = "mercy_py_bridge"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
pyo3-asyncio = { workspace = true }
numpy = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
mercy_crypto_ml_kem = { path = "../mercy_crypto_ml_kem", optional = true }
mercy_crypto_dilithium = { path = "../mercy_crypto_dilithium", optional = true }

[features]
default = ["pyo3/extension-module", "numpy"]
