[package]
name = "mercy_uniffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "mercy_uniffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { workspace = true }

# Core exposure
grok_oracle = { path = "../grok_oracle" }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
