# powrush_mmo — Infinite Mercy Abundance MMO Universe
# Proximity voice chat integrated

[package]
name = "powrush_mmo"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
lightyear = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy_egui = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
bevy_audio_stream = { workspace = true }
opus = { workspace = true }
kira = { workspace = true }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
