[package]
name = "powrush_mmo"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "powrush_mmo"
path = "src/main.rs"

[dependencies]
mercy_core.workspace = true
bevy = { workspace = true }
bevy_renet = "0.0.9"
bevy_kira_audio = { version = "0.18", features = ["ogg"] }
noise = "0.8"
rand.workspace = true
tokio.workspace = true
kira = "0.8"
pqc-ml-kem = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
lightyear = "0.13"  # Reliable channel handshake mercy
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
